<resources>
    <string name="app_name">My CV</string>
    <string name="action_switch">Switch Night Mode</string>
    <!-- Strings used for fragments for navigation -->
    <string name="app_label">My CV</string>
    <string name="call_me">Call ME</string>
    <string name="my_name">Ali Salesi</string>
    <string name="cv_para_title_1">Education</string>
    <string name="cv_para_desc_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Id consectetur purus ut faucibus. Suspendisse in est ante in. Id volutpat lacus laoreet non curabitur gravida. Etiam erat velit scelerisque in dictum non consectetur a. Elementum nisi quis eleifend quam. Cursus turpis massa tincidunt dui ut ornare lectus sit amet. Mauris ultrices eros in cursus turpis massa tincidunt dui ut. Felis bibendum ut tristique et egestas quis ipsum. Eget felis eget nunc lobortis mattis aliquam faucibus. Sed enim ut sem viverra aliquet eget sit amet. Aenean euismod elementum nisi quis eleifend quam. Sed id semper risus in hendrerit gravida rutrum.
Mi bibendum neque egestas congue quisque egestas diam in arcu. Laoreet non curabitur gravida arcu ac. Aliquam id diam maecenas ultricies mi. Ut pharetra sit amet aliquam id. Mattis enim ut tellus elementum sagittis vitae et. Praesent elementum facilisis leo vel. Dolor sit amet consectetur adipiscing elit ut. Elit scelerisque mauris pellentesque pulvinar pellentesque habitant. Hendrerit gravida rutrum quisque non tellus orci ac auctor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames.</string>
    <string name="cv_para_title_2">Experience</string>
    <string name="cv_para_desc_2">Id semper risus in hendrerit gravida rutrum quisque. Quam quisque id diam vel quam elementum pulvinar etiam non. Felis eget velit aliquet sagittis id consectetur. Penatibus et magnis dis parturient montes nascetur. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Tristique et egestas quis ipsum suspendisse ultrices gravida dictum. Integer quis auctor elit sed vulputate mi. Sapien eget mi proin sed libero. Laoreet non curabitur gravida arcu ac tortor dignissim convallis aenean. Sed faucibus turpis in eu. Curabitur gravida arcu ac tortor dignissim convallis aenean. Bibendum arcu vitae elementum curabitur vitae nunc sed velit.
Nisi scelerisque eu ultrices vitae auctor eu augue ut. Odio ut sem nulla pharetra. Nisl suscipit adipiscing bibendum est ultricies integer quis. Dignissim diam quis enim lobortis. Viverra maecenas accumsan lacus vel facilisis. Id aliquet lectus proin nibh. Posuere sollicitudin aliquam ultrices sagittis orci. Et ultrices neque ornare aenean euismod elementum nisi. Tellus integer feugiat scelerisque varius morbi enim. Integer malesuada nunc vel risus commodo viverra maecenas accumsan. Commodo sed egestas egestas fringilla phasellus.</string>
    <string name="cv_para_title_3">Projects</string>
    <string name="cv_para_desc_3">Nulla posuere sollicitudin aliquam ultrices sagittis orci a. Hac habitasse platea dictumst quisque sagittis. Id leo in vitae turpis massa sed. Id neque aliquam vestibulum morbi. Semper viverra nam libero justo laoreet sit amet cursus. Ornare arcu dui vivamus arcu felis bibendum ut. Amet luctus venenatis lectus magna fringilla. Id velit ut tortor pretium viverra suspendisse potenti. Elementum nisi quis eleifend quam adipiscing vitae proin sagittis. Nullam ac tortor vitae purus faucibus ornare suspendisse sed nisi. Aliquam sem et tortor consequat id porta. Iaculis urna id volutpat lacus laoreet non curabitur. Eu facilisis sed odio morbi. Duis tristique sollicitudin nibh sit amet commodo nulla facilisi. Lacinia at quis risus sed. Massa eget egestas purus viverra. Orci dapibus ultrices in iaculis nunc sed augue lacus.</string>
</resources>